테스트 프론트 개발

--- a/test.html
+++ b/test.html
@@ -1,20 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Test Page</title>
+    <link rel="stylesheet" href="test.css">
+    <script src="jquery-3.5.1.min.js"></script>
+
+    <script>
+        
+        var names = [['qamanager_manson', 'dgseo_male', 'fish_killer'], ['winger_winger', 'door_closer', 'soloforever_ever'], ['rose_flowerman', 'oxford_bookworm', 'sun_glassmaker']]
+
+        var trySeek = function(col, row) {
+
+            document.getElementById("box" + col + row).className = "show-box";
+            document.getElementById("box" + col + row).innerText = names[col][row].replace(/_/g, "\n");
+
+            if (names[col][row] == "dgseo_male") {
+                alert('dgseo_male is over.');
+
+                testcall(4, 4);
+            }
+        }
+        
+        function testcall(col, row){
+
+            $.ajax({
+                url: '/testreturn',
+                type: 'get',
+                success: function(data){
+                    console.log(data);
+                },
+                error : function(xtr,status,error){
+                    alert('fail to get data');
+                }
+            });
+        }
+
+    </script>
 </head>
 <body>
-    <ul>
-        <li>
-            dgSeo
-        </li>
-        <li>
-            Test
-        </li>
-    </ul>
+    <div>
+        <table>
+            <tr>
+                <td>
+                    <div class="hide-box" id="box00" onclick="trySeek(0, 0)"></div>
+                </td>
+                <td>
+                    <div class="hide-box" id="box01" onclick="trySeek(0, 1)"></div>
+                </td>
+                <td>
+                    <div class="hide-box" id="box02" onclick="trySeek(0, 2)"></div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="hide-box" id="box10" onclick="trySeek(1, 0)"></div>
+                </td>
+                <td>
+                    <div class="hide-box" id="box11" onclick="trySeek(1, 1)"></div>
+                </td>
+                <td>
+                    <div class="hide-box" id="box12" onclick="trySeek(1, 2)"></div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="hide-box" id="box20" onclick="trySeek(2, 0)"></div>
+                </td>
+                <td>
+                    <div class="hide-box" id="box21" onclick="trySeek(2, 1)"></div>
+                </td>
+                <td>
+                    <div class="hide-box" id="box22" onclick="trySeek(2, 2)"></div>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div>
+        <input type="button" class="button" value="Restart" />
+    </div>
 </body>
-</body>
+
 </html>
